; ModuleID = '/home/carl/AnghaBench/twemproxy/src/hashkit/extr_nc_random.c_random_dispatch.c'
source_filename = "/home/carl/AnghaBench/twemproxy/src/hashkit/extr_nc_random.c_random_dispatch.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.continuum = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @random_dispatch(%struct.continuum* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.continuum*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca %struct.continuum*, align 8
  store %struct.continuum* %0, %struct.continuum** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = load %struct.continuum*, %struct.continuum** %4, align 8
  %9 = icmp ne %struct.continuum* %8, null
  %10 = zext i1 %9 to i32
  %11 = call i32 @ASSERT(i32 %10)
  %12 = load i32, i32* %5, align 4
  %13 = icmp ne i32 %12, 0
  %14 = zext i1 %13 to i32
  %15 = call i32 @ASSERT(i32 %14)
  %16 = load %struct.continuum*, %struct.continuum** %4, align 8
  %17 = call i32 (...) @random()
  %18 = load i32, i32* %5, align 4
  %19 = srem i32 %17, %18
  %20 = sext i32 %19 to i64
  %21 = getelementptr inbounds %struct.continuum, %struct.continuum* %16, i64 %20
  store %struct.continuum* %21, %struct.continuum** %7, align 8
  %22 = load %struct.continuum*, %struct.continuum** %7, align 8
  %23 = getelementptr inbounds %struct.continuum, %struct.continuum* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 4
  ret i32 %24
}

declare dso_local i32 @ASSERT(i32) #1

declare dso_local i32 @random(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
